fixed panel overflow issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,4 +33,7 @@
 .selectize-input > div {
   background: none !important; }
 
+.panel-group .panel {
+  overflow: auto; }
+
 /*# sourceMappingURL=styles.css.map */
